# hedsupforlife

./: .dockerignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .pydocstyle  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  home_page_old.html  manage.py  original_working_directory.txt  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.github/workflows/: ci-cd.yaml
src/hedsupforlife/: __init__.py  config.py  urls.py  wsgi.py
src/hedsupforlife/blog/: apps.py  models.py
src/hedsupforlife/blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_articlepage_body.py  0004_alter_articlepage_author_alter_articlepage_body.py
src/hedsupforlife/home/: __init__.py  config.py  models.py
src/hedsupforlife/home/migrations/: 0001_initial.py  0002_initial.py  0003_remove_homepage_team_member_alter_homepage_body.py  0004_alter_homepage_body.py
src/hedsupforlife/images/: apps.py  models.py
src/hedsupforlife/images/migrations/: 0001_initial.py
src/hedsupforlife/management/commands/: initadmin.py
src/hedsupforlife/settings/: base.py  develop.py  production.py
src/hedsupforlife/utils/: apps.py  blocks.py  models.py
src/hedsupforlife/utils/migrations/: 0001_initial.py  0002_remove_authorsnippet_image_membersnippet.py  0003_delete_authorsnippet.py
src/hedsupforlife/utils/templatetags/: util_tags.py
src/static/css/: main.css  tailwind.css
src/static/js/: main.js  script.js
src/templates/: 500.html  base.html  main.html
src/templates/components/: pagination.html
src/templates/components/streamfield/blocks/: heading2_block.html  paragraph_block.html  section_block_heading.html  team_member_block.html
src/templates/home/: home_page.html
src/templates/pages/: blog_listing_page.html  blog_page.html  home_page.html
static/css/: main.css
tests/factories/: __ini__.py
tests/migrations/: test_migrations.py
tests/models/: test_users.py
